exclude signup and auth router from auth filter
